{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 54,
  "lineage": "b02e7ae8-4569-6afb-79cd-05f58c24ab1d",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "myTF_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365464362012:route-table/rtb-043cc4657517f899d",
            "default_route_table_id": "rtb-043cc4657517f899d",
            "id": "rtb-043cc4657517f899d",
            "owner_id": "365464362012",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myTF_private_rt"
            },
            "tags_all": {
              "Name": "myTF_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0346b2ff2a4792d9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.myTF_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myTF_internetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365464362012:internet-gateway/igw-010390e0603d0ebb7",
            "id": "igw-010390e0603d0ebb7",
            "owner_id": "365464362012",
            "tags": {
              "Name": "myTF_public_igw"
            },
            "tags_all": {
              "Name": "myTF_public_igw"
            },
            "vpc_id": "vpc-0346b2ff2a4792d9b"
          },
          "dependencies": [
            "module.networking.aws_vpc.myTF_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "myTF_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-010390e0603d0ebb7",
            "id": "r-rtb-0e4a40d2f7c7be5e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4a40d2f7c7be5e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.myTF_internetgateway",
            "module.networking.aws_route_table.myTF_rt",
            "module.networking.aws_vpc.myTF_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myTF_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365464362012:route-table/rtb-0e4a40d2f7c7be5e3",
            "id": "rtb-0e4a40d2f7c7be5e3",
            "owner_id": "365464362012",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-010390e0603d0ebb7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myTF_public_rt"
            },
            "tags_all": {
              "Name": "myTF_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0346b2ff2a4792d9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.myTF_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myTF_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea886f916bd9e4b6",
            "route_table_id": "rtb-0e4a40d2f7c7be5e3",
            "subnet_id": "subnet-0c652d5f9a29b3827"
          },
          "dependencies": [
            "module.networking.aws_route_table.myTF_rt",
            "module.networking.aws_subnet.myTF_public",
            "module.networking.aws_vpc.myTF_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myTF_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365464362012:security-group/sg-08983326aba3b029f",
            "description": "Security Group for resources in Private Subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "10.17.0.0/27"
                ],
                "description": "All traffic access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08983326aba3b029f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.17.0.0/27"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myTF_private_sg",
            "name_prefix": "",
            "owner_id": "365464362012",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0346b2ff2a4792d9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.myTF_vpc",
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myTF_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365464362012:security-group/sg-0ff24d66e58948927",
            "description": "Security Group for Public Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff24d66e58948927",
            "ingress": [
              {
                "cidr_blocks": [
                  "50.98.113.105/32"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "50.98.113.105/32"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myTF_public_sg",
            "name_prefix": "",
            "owner_id": "365464362012",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0346b2ff2a4792d9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.myTF_vpc",
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "All_egress_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.17.0.0/27"
            ],
            "description": "All traffic access",
            "from_port": 0,
            "id": "sgrule-1902728336",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08983326aba3b029f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.myTF_private_sg",
            "module.networking.aws_vpc.myTF_vpc",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myTF_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365464362012:subnet/subnet-0133bdccd5846bf85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.17.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0133bdccd5846bf85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365464362012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myTF_Private_1"
            },
            "tags_all": {
              "Name": "myTF_Private_1"
            },
            "vpc_id": "vpc-0346b2ff2a4792d9b"
          },
          "dependencies": [
            "module.networking.aws_vpc.myTF_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myTF_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365464362012:subnet/subnet-0c652d5f9a29b3827",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.17.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c652d5f9a29b3827",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "365464362012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myTF_Public_1"
            },
            "tags_all": {
              "Name": "myTF_Public_1"
            },
            "vpc_id": "vpc-0346b2ff2a4792d9b"
          },
          "dependencies": [
            "module.networking.aws_vpc.myTF_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myTF_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:365464362012:vpc/vpc-0346b2ff2a4792d9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.17.0.0/27",
            "default_network_acl_id": "acl-0b379cba147b6aaf0",
            "default_route_table_id": "rtb-043cc4657517f899d",
            "default_security_group_id": "sg-054e94647bc6ca8b4",
            "dhcp_options_id": "dopt-047486a12d6e5ae43",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0346b2ff2a4792d9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-043cc4657517f899d",
            "owner_id": "365464362012",
            "tags": {
              "Name": "myTF_vpc_29"
            },
            "tags_all": {
              "Name": "myTF_vpc_29"
            }
          },
          "dependencies": [
            "module.networking.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}